--- a/src/main/resources/templates/boardC/api.html
+++ b/src/main/resources/templates/boardC/api.html
@@ -26,8 +26,11 @@
 		// 주소-좌표 변환 객체를 생성합니다
 		var geocoder = new kakao.maps.services.Geocoder();
 
+		var address = "[[${address}]]";
+		var title = "[[${title}]]";
+
 		// 주소로 좌표를 검색합니다
-		geocoder.addressSearch('서울특별시 강남구 압구정로60길 21 분더샵(A)', function (result, status) {
+		geocoder.addressSearch(address, function (result, status) {
 
 			// 정상적으로 검색이 완료됐으면 
 			if (status === kakao.maps.services.Status.OK) {
@@ -42,7 +45,7 @@
 
 				// 인포윈도우로 장소에 대한 설명을 표시합니다
 				var infowindow = new kakao.maps.InfoWindow({
-					content: '<div style="width:150px;text-align:center;padding:6px 0;">새벽집</div>'
+					content: '<div style="width:150px;text-align:center;padding:6px 0;">'+title+'</div>'
 				});
 				infowindow.open(map, marker);
 
