--- a/src/main/resources/templates/fragments/base.html
+++ b/src/main/resources/templates/fragments/base.html
@@ -1,40 +1,55 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
+
 <head>
 	<header th:fragment="head">
-		<title>Advanced BBS Project</title>
+		<title>맛집맛집맛집맛집맛집맛집맛집맛집</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet">
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 		<script src="https://kit.fontawesome.com/f474084c1e.js" crossorigin="anonymous"></script>
-		<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+			integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+			crossorigin="anonymous"></script>
+		<script src="https://code.jquery.com/jquery-3.7.1.min.js"
+			integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 		<style>
-			* { font-family: 'Noto Sans KR', sans-serif; }
-			a { text-decoration: none; }
-			.disabled-link { pointer-events: none; }
+			* {
+				font-family: 'Noto Sans KR', sans-serif;
+			}
+
+			a {
+				text-decoration: none;
+			}
+
+			.disabled-link {
+				pointer-events: none;
+			}
 		</style>
 		<script src="/mid/js/aside.js?v=3"></script>
 	</header>
 </head>
+
 <body>
 	<div th:fragment="top">
 		<header id="header">
-			<nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+			<nav class="navbar navbar-expand-sm fixed-top" style="background-color: rgb(255, 80, 0);">
 				<div class="container-fluid">
 					<ul class="navbar-nav">
-						<a class="navbar-brand mx-5" href="#"><img src="/mid/img/ck-logo.png" height="36"></a>
-						<li class="nav-item ms-3">
-							<a class="nav-link" th:classappend="${menu eq 'board' ? 'active' : ''}" href="/mid/board/list"><i class="far fa-list-alt"></i> 게시판</a>
+						<a class="navbar-brand ms-5 me-2" href="#"><img src="/mid/img/naver-logo.png" height="36"></a>
+						<li class="nav-item ms-2">
+							<a class="nav-link" th:classappend="${menu eq 'board' ? 'active' : ''}"
+								href="/mid/board/list"><i class="far fa-list-alt"></i> 게시판</a>
 						</li>
-						<li class="nav-item ms-3">
-							<a class="nav-link" th:classappend="${menu eq 'user' ? 'active' : ''}" href="#"><i class="fas fa-user-friends"></i> 사용자</a>
+						<li class="nav-item ms-2">
+							<a class="nav-link" th:classappend="${menu eq 'user' ? 'active' : ''}" href="#"><i
+									class="fas fa-user-friends"></i> 사용자</a>
 						</li>
-						<li class="nav-item ms-3">
-							<a class="nav-link" th:classappend="${menu eq 'schedule' ? 'active' : ''}" href="/mid/schedule/calendar"><i class="fa-solid fa-calendar-days"></i> 스케쥴</a>
-						</li>
-						<li class="nav-item ms-3">
+					</ul>
+					<ul class="navbar-nav ms-auto me-4">
+						<li class="nav-item">
 							<span th:if="${session.sessUid}">
 								<a class="nav-link" href="/mid/user/logout"><i class="fas fa-sign-out-alt"></i> 로그아웃</a>
 							</span>
@@ -50,6 +65,7 @@
 			</nav>
 		</header>
 	</div>
+
 
 	<div class="container" style="margin-top:80px">
 		<div class="row">
@@ -68,7 +84,7 @@
 					</div>
 					<div id="stateMsgInput" class="mt-2 d-none">
 						<input class="form-control form-control-sm" type="text" id="stateInput"
-									onkeyup="if(window.event.keyCode==13) {changeStateMsg()}">
+							onkeyup="if(window.event.keyCode==13) {changeStateMsg()}">
 						<a href="#" id="stateMsgSubmit"><span class="badge bg-primary">확인</span></a>
 					</div>
 
@@ -77,13 +93,12 @@
 						<i class="fa-brands fa-github me-2"></i><a href="#">[[${session.github}]]</a><br>
 						<i class="fa-brands fa-instagram me-2"></i><a href="#">[[${session.insta}]]</a><br>
 						<i class="fa-solid fa-location-dot me-2"></i> [[${session.location}]]
-							<a href="#" id="getWeatherButton"><span class="badge bg-secondary">날씨</span></a><br>
+						<a href="#" id="getWeatherButton"><span class="badge bg-secondary">날씨</span></a><br>
 						<div id="weather"></div>
 						<button class="btn btn-sm btn-outline-primary mt-3">Edit Profile</button>
 					</div>
 				</aside>
 			</div>
-
 		</div>
 	</div>
 
@@ -97,4 +112,5 @@
 		</nav>
 	</footer>
 </body>
+
 </html>
